# kerkour.com

blog/2021/benchmarking_symmetric_encryption_in_rust/: Cargo.toml
blog/2021/benchmarking_symmetric_encryption_in_rust/benches/: crypto.rs
